--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;900&display=swap" rel="stylesheet">
+    <link href="../../../FontAwesome/fontawesome-free-5.15.1-web/css//all.css" rel="stylesheet">
     <title>MovieApp</title>
   </head>
   <body>
